@@ -1,5 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Added a new <target> element to XML output that indicates when a
+  target specification was ignored, perhaps because of a syntax error
+  or DNS failure. It looks like this:
+    <target specification="1.2.3.4.5" status="skipped" reason="invalid"/>
+  [David Fifield]
+
 o [NSE] Added the script mmouse-exec that connects to a Mobile Mouse server,
   starts an application, and sends a sequence of keystrokes to it. [Patrik
   Karlsson]
